# dev-orchestrator

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: projects.template.json
docs/: API_SPEC.md  ARCHITECTURE.md  DATA_SCHEMA.md  IMPLEMENTATION_PLAN.md  MCP_SETUP.md  QUICKSTART.md  TASKS.md  TROUBLESHOOTING.md
src/: __init__.py
src/core/: __init__.py  models.py  port_manager.py  process_controller.py  project_registry.py
src/dashboard/: __init__.py  app.py
src/mcp_server/: __init__.py  server.py
tests/: __init__.py  test_core.py
